功能初步完成

--- a/src/js/containers/Home/index.module.scss
+++ b/src/js/containers/Home/index.module.scss
@@ -117,6 +117,7 @@
   border-radius: 0.6rem;
   padding: 0 0.3rem;
   font-size: 0.26rem;
+  margin-right: .2rem;
 }
 .itemArrow {
   display: inline-block;
